force-app/main/default/objects/Work_Log__c/Work_Log__c.object-meta.xml
<CustomObject>
    <label>Cleanslate Work Log</label>
    <nameField>
        <displayFormat>WorkLog - {00000}</displayFormat>
        <label>Work Log System #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cleanslate Work Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>