force-app/main/default/objects/Work_Log__c/fields/Active_Rate_Set__c.field-meta.xml
<CustomField>
    <fullName>Active_Rate_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Active Rate Set</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipName>Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>