force-app/main/default/objects/Work_Log__c/fields/Arrival_Time_Begin_Work__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_Begin_Work__c</fullName>
    <label>Arrival Time, Begin Work</label>
    <length>8</length>
    <type>Text</type>
</CustomField>