force-app/main/default/objects/Work_Log__c/fields/Arrival_Time_Begin_Work_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_Begin_Work_Proxy__c</fullName>
    <formula>if (contains (Arrival_Time_Begin_Work__c, &quot;AM&quot;) &amp;&amp; contains (Arrival_Time_Begin_Work__c, &quot;12:&quot;), value(substitute(substitute(Arrival_Time_Begin_Work__c, &quot;12:&quot;, &quot;0.&quot;), &quot; AM&quot;, NULL)), 

if (contains (Arrival_Time_Begin_Work__c, &quot;AM&quot;), value(substitute(substitute(Arrival_Time_Begin_Work__c, &quot;:&quot;, &quot;.&quot;), &quot; AM&quot;, NULL)), 

if (contains (Arrival_Time_Begin_Work__c, &quot;PM&quot;) &amp;&amp; contains (Arrival_Time_Begin_Work__c, &quot;12:&quot;), value(substitute(substitute(Arrival_Time_Begin_Work__c, &quot;:&quot;, &quot;.&quot;), &quot; PM&quot;, NULL)), 

if (contains (Arrival_Time_Begin_Work__c, &quot;PM&quot;), value(substitute(substitute(Arrival_Time_Begin_Work__c, &quot;:&quot;, &quot;.&quot;), &quot; PM&quot;, NULL))+12, 

NULL))))</formula>
    <label>Arrival Time, Begin Work Proxy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>