force-app/main/default/objects/Work_Log__c/fields/Bags_of_Trash_Collected__c.field-meta.xml
<CustomField>
    <fullName>Bags_of_Trash_Collected__c</fullName>
    <label># Bags of Trash Collected</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>