force-app/main/default/objects/Work_Log__c/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <description>Requested by SG to collect notes on billing amounts.</description>
    <inlineHelpText>Enter any notes on billing amounts here.</inlineHelpText>
    <label>Billing Notes</label>
    <type>TextArea</type>
</CustomField>