force-app/main/default/objects/Work_Log__c/fields/Bus_Stops_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Bus_Stops_Cleared__c</fullName>
    <label># Bus Stops Cleared</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>