force-app/main/default/objects/Work_Log__c/fields/Crosswalks_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Crosswalks_Cleared__c</fullName>
    <label># Crosswalks Cleared</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>