force-app/main/default/objects/Work_Log__c/fields/Customer_Name_Wage_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Wage_Allocations__c</fullName>
    <formula>CASE(Customer_Name__c,
&quot;312 Goose Island Urban Block Party&quot;, &quot;312 Goose Island&quot;, 
&quot;Admiral&quot;, &quot;The Admiral&quot;, 
&quot;Albany Park (SSA 60)&quot;, &quot;Albany Park&quot;, 
&quot;Andersonville Chamber of Commerce (SSA 22)&quot;, &quot;Andersonville&quot;,
&quot;Andersonville City Made Fest&quot;, &quot;Andersonville Fest&quot;, 
&quot;Auburn Gresham (SSA 32)&quot;, &quot;Auburn Gresham&quot;, 
&quot;Auburn Gresham (SSA 69)&quot;, &quot;Aub Gresham 69&quot;, 
&quot;Austin Lusson&quot;, &quot;Lusson, Austin&quot;,
&quot;Beth Peter&quot;, &quot;Peter, Beth&quot;,
&quot;Big Buzz - Apple Fest&quot;, &quot;Apple Fest (Big Buzz Media)&quot;,
&quot;Big Buzz - Hot Dog Fest&quot;, &quot;Big Buzz Hot Dog Fest&quot;,
&quot;Big Buzz - Ribfest&quot;, &quot;Ribfest&quot;,
&quot;Dan Brennan&quot;, &quot;Brennan&quot;, 
&quot;Calumet Heights Avalon (SSA)&quot;, &quot;Calumet Heights Avalon&quot;, 
&quot;Cary Main Street Fest&quot;, &quot;Cary Main St Fest&quot;, 
&quot;Cedar Street Companies&quot;, &quot;Cedar Street&quot;, 
&quot;Chicago Center for Arts and Technology&quot;, &quot;Chi Ctr Arts Tech&quot;, 
&quot;Community Builders&quot;, &quot;The Community Builders&quot;,
&quot;Eastwood Garden (The Habitat Company)&quot;, &quot;Habitat Eastwd&quot;,
&quot;Edgewater (SSA 26)&quot;, &quot;Edgewater 26&quot;, 
&quot;Emmanuel Church of God in Christ&quot;, &quot;Small Contracts&quot;,
&quot;Garfield (McCaffery)&quot;, &quot;Garfield McCaff&quot;, 
&quot;Harper Court (McCaffery)&quot;, &quot;Harper Court&quot;,
&quot;Hearts Nightclub&quot;, &quot;Hearts&quot;, 
&quot;Hope Manor II - Vol of America&quot;, &quot;2 Hope Manor&quot;, 
&quot;Hope Manor I - Vol of America&quot;, &quot;Hope Manor&quot;, 
&quot;Hub (Cleanslate Chicago)&quot;, &quot;Hubb&quot;, 
&quot;Hyde Park (SSA 61)&quot;, &quot;Hyde Park&quot;, 
&quot;Industrial Council of Northwest Chicago&quot;, &quot;Industrial council NW Chicago&quot;, 
&quot;Lakeview (SSA 27)&quot;, &quot;Lakeview SSA #27&quot;, 
&quot;Lincoln Park Chamber of Commerce (Clark Street SSA 23)&quot;, &quot;Clark St&quot;,	
&quot;Lincoln Square Ravenswood Chamber of Commerce&quot;, &quot;Lincoln Square Chamber of Commerce&quot;,
&quot;Little Village (SSA)&quot;, &quot;Little Village&quot;, 
&quot;Mid-America - All Locations&quot;, &quot;Mid-America all locations&quot;, 
&quot;Nortcenter Ch of Com - Ribfest&quot;, &quot;Ribfest&quot;, 
&quot;Old St Pats&quot;, &quot;Old St. Pat&apos;s Church&quot;, 
&quot;Pine Grove Condos 3631 North&quot;, &quot;Pine Grove&quot;, 
&quot;Public Building Commission of Chicago&quot;, &quot;Public Bldg Comm Chicago&quot;, 
&quot;Quad Communities (SSA 47)&quot;, &quot;QCDC&quot;, 
&quot;Quad Communities (SSA 56)&quot;, &quot;QCDC 56&quot;, 
&quot;Ribfest (Big Buzz Media)&quot;, &quot;Ribfest&quot;,
&quot;Roseland (SSA 40)&quot;, &quot;Roseland&quot;, 
&quot;Roseland (SSA 41)&quot;, &quot;Roseland&quot;, 
&quot;Roseland (SSA)&quot;, &quot;Roseland&quot;,
&quot;SEIU (Service Employees International Union)&quot;, &quot;SEIU&quot;, 
&quot;South Commons - Stage 1 Venture&quot;, &quot;South Commons&quot;, 
&quot;South Shore (SSA)&quot;, &quot;South Shore&quot;, 
&quot;Sterling Bay - Fulton Green Market&quot;, &quot;Sterling Fulton&quot;, 
&quot;Sterling Bay - Parent Co Projects&quot;, &quot;Sterling Bay&quot;, 
&quot;The Cara Program&quot;, &quot;TCP&quot;, 
&quot;Uptown (SSA)&quot;, &quot;Uptown&quot;, 
&quot;Value Industrial Partners LLC&quot;, &quot;Value Industrial Partners, LLC&quot;,
&quot;Vertiport Nighthawk&quot;, &quot;AFCO Nighthawk&quot;, 
&quot;West Humboldt Park (SSA 63)&quot;, &quot;West Humboldt Park&quot;, 
&quot;West Town (SSA)&quot;, &quot;West Town&quot;, 
&quot;Wicker Park / Bucktown (SSA)&quot;, &quot;Wicker Park&quot;,
 text(Customer_Name__c))</formula>
    <label>Customer Name, Wage Allocations</label>
    <type>Text</type>
</CustomField>