force-app/main/default/objects/Work_Log__c/fields/Departure_Time_Begin_Transport__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_Begin_Transport__c</fullName>
    <label>Departure Time, Begin Transport</label>
    <length>8</length>
    <type>Text</type>
</CustomField>