force-app/main/default/objects/Work_Log__c/fields/Departure_Time_Site_Completed__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_Site_Completed__c</fullName>
    <label>Departure Time, Site Completed</label>
    <length>8</length>
    <type>Text</type>
</CustomField>