force-app/main/default/objects/Work_Log__c/fields/Departure_Time_Site_Completed_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_Site_Completed_Proxy__c</fullName>
    <formula>if (contains (Departure_Time_Site_Completed__c, &quot;AM&quot;) &amp;&amp; contains (Departure_Time_Site_Completed__c, &quot;12:&quot;), value(substitute(substitute(Departure_Time_Site_Completed__c, &quot;12:&quot;, &quot;0.&quot;), &quot; AM&quot;, NULL)), 

if (contains (Departure_Time_Site_Completed__c, &quot;AM&quot;), value(substitute(substitute(Departure_Time_Site_Completed__c, &quot;:&quot;, &quot;.&quot;), &quot; AM&quot;, NULL)), 

if (contains (Departure_Time_Site_Completed__c, &quot;PM&quot;) &amp;&amp; contains (Departure_Time_Site_Completed__c, &quot;12:&quot;), value(substitute(substitute(Departure_Time_Site_Completed__c, &quot;:&quot;, &quot;.&quot;), &quot; PM&quot;, NULL)), 

if (contains (Departure_Time_Site_Completed__c, &quot;PM&quot;), value(substitute(substitute(Departure_Time_Site_Completed__c, &quot;:&quot;, &quot;.&quot;), &quot; PM&quot;, NULL))+12, 

NULL))))</formula>
    <label>Departure Time, Site Completed Proxy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>