force-app/main/default/objects/Work_Log__c/fields/Destination_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Destination_Arrival__c</fullName>
    <label>Destination Arrival</label>
    <length>8</length>
    <type>Text</type>
</CustomField>