force-app/main/default/objects/Work_Log__c/fields/Destination_Arrival_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Destination_Arrival_Proxy__c</fullName>
    <formula>if (contains (Destination_Arrival__c, &quot;AM&quot;) &amp;&amp; contains (Destination_Arrival__c, &quot;12:&quot;), value(substitute(substitute(Destination_Arrival__c, &quot;12:&quot;, &quot;0.&quot;), &quot; AM&quot;, NULL)), 

if (contains (Destination_Arrival__c, &quot;AM&quot;), value(substitute(substitute(Destination_Arrival__c, &quot;:&quot;, &quot;.&quot;), &quot; AM&quot;, NULL)), 

if (contains (Destination_Arrival__c, &quot;PM&quot;) &amp;&amp; contains (Destination_Arrival__c, &quot;12:&quot;), value(substitute(substitute(Destination_Arrival__c, &quot;:&quot;, &quot;.&quot;), &quot; PM&quot;, NULL)), 

if (contains (Destination_Arrival__c, &quot;PM&quot;), value(substitute(substitute(Destination_Arrival__c, &quot;:&quot;, &quot;.&quot;), &quot; PM&quot;, NULL))+12, 

NULL))))</formula>
    <label>Destination Arrival Proxy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>