force-app/main/default/objects/Work_Log__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select Dimension 1 that should be used for reporting on the Journal Entry</inlineHelpText>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipName>Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>