force-app/main/default/objects/Work_Log__c/fields/Dimension_1_Description__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1_Description__c</fullName>
    <formula>Dimension_1__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 1 Description</label>
    <type>Text</type>
</CustomField>