force-app/main/default/objects/Work_Log__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select Dimension 2 that should be used for reporting on the Journal Entry</inlineHelpText>
    <label>Dimension 2</label>
    <referenceTo>c2g__codaDimension2__c</referenceTo>
    <relationshipName>Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>