force-app/main/default/objects/Work_Log__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select Dimension 3 that should be used for reporting on the Journal Entry</inlineHelpText>
    <label>Dimension 3</label>
    <referenceTo>c2g__codaDimension3__c</referenceTo>
    <relationshipName>Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>