force-app/main/default/objects/Work_Log__c/fields/Dimension_3_Description__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3_Description__c</fullName>
    <formula>Dimension_3__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 3 Description</label>
    <type>Text</type>
</CustomField>