force-app/main/default/objects/Work_Log__c/fields/Graffiti_Comments__c.field-meta.xml
<CustomField>
    <fullName>Graffiti_Comments__c</fullName>
    <inlineHelpText>Enter any notes about graffiti tag sizes and removal of posters.</inlineHelpText>
    <label>Graffiti Location</label>
    <type>TextArea</type>
</CustomField>