force-app/main/default/objects/Work_Log__c/fields/Graffiti_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Graffiti_Reference_No__c</fullName>
    <label>Graffiti Reference No</label>
    <type>TextArea</type>
</CustomField>