force-app/main/default/objects/Work_Log__c/fields/Graffiti_Tags_Reported__c.field-meta.xml
<CustomField>
    <fullName>Graffiti_Tags_Reported__c</fullName>
    <label># Graffiti Tags Reported</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>