force-app/main/default/objects/Work_Log__c/fields/Inches_of_Snow__c.field-meta.xml
<CustomField>
    <fullName>Inches_of_Snow__c</fullName>
    <label>Inches of Snow</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>