force-app/main/default/objects/Work_Log__c/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CLSL</fullName>
            </value>
            <value>
                <fullName>Graffiti</fullName>
            </value>
            <value>
                <fullName>Janitorial (Interior)</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
            <value>
                <fullName>Litter Abatement</fullName>
            </value>
            <value>
                <fullName>None - Voided Log</fullName>
            </value>
            <value>
                <fullName>Pressure Wash</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Snow Removal</fullName>
            </value>
            <value>
                <fullName>Special Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>