force-app/main/default/objects/Work_Log__c/fields/Job_Function_Wage_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Job_Function_Wage_Allocations__c</fullName>
    <formula>case (Job_Function__c,
&quot;Litter Abatement&quot;,&quot;LIT&quot;,
&quot;Landscaping&quot;, &quot;LAN&quot;,
&quot;Snow Removal&quot;, &quot;SNO&quot;,
&quot;Special Event&quot;, &quot;SPEV&quot;,
&quot;Service&quot;, &quot;SER&quot;,
&quot;Graffiti&quot;, &quot;GRA&quot;,
&quot;Pressure Wash&quot;, &quot;PRW&quot;,
&quot;CLSL&quot;, &quot;CLSL&quot;,
&quot;Janitorial (Interior)&quot;, &quot;HOU&quot;,
&quot;CC2 Code Needed&quot;)</formula>
    <label>Job Function, Wage Allocations</label>
    <type>Text</type>
</CustomField>