force-app/main/default/objects/Work_Log__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <label>Log #</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>