force-app/main/default/objects/Work_Log__c/fields/Lunch_End__c.field-meta.xml
<CustomField>
    <fullName>Lunch_End__c</fullName>
    <label>Lunch End</label>
    <length>8</length>
    <type>Text</type>
</CustomField>