force-app/main/default/objects/Work_Log__c/fields/Lunch_Start__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Start__c</fullName>
    <label>Lunch Start</label>
    <length>8</length>
    <type>Text</type>
</CustomField>