force-app/main/default/objects/Work_Log__c/fields/Lunch_Start_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Start_Proxy__c</fullName>
    <label>Lunch Start Proxy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>