force-app/main/default/objects/Work_Log__c/fields/Lunch_Time__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Time__c</fullName>
    <formula>Lunch_End_Proxy__c - Lunch_Start_Proxy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunch Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>