force-app/main/default/objects/Work_Log__c/fields/Mileage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Cost__c</fullName>
    <formula>Total_Mileage__c * Active_Rate_Set__r.Mileage_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mileage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>