force-app/main/default/objects/Work_Log__c/fields/Mileage_In__c.field-meta.xml
<CustomField>
    <fullName>Mileage_In__c</fullName>
    <label>Mileage In</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>