force-app/main/default/objects/Work_Log__c/fields/Mileage_Out__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Out__c</fullName>
    <label>Mileage Out</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>