force-app/main/default/objects/Work_Log__c/fields/Number_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Staff__c</fullName>
    <label>Number of Staff</label>
    <summaryFilterItems>
        <field>Worker_Time__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Cleanslate Staff Time</value>
    </summaryFilterItems>
    <summaryForeignKey>Worker_Time__c.Work_Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>