force-app/main/default/objects/Work_Log__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization (Customer)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.Customer_Type_Formula__c</field>
            <operation>contains</operation>
            <value>Cleanslate</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Id</field>
            <operation>equals</operation>
            <value>00ei0000001FFFf</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cleanslate Work Logs</relationshipLabel>
    <relationshipName>Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>