force-app/main/default/objects/Work_Log__c/fields/Planters_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Planters_Serviced__c</fullName>
    <label># Planters Serviced</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>