force-app/main/default/objects/Work_Log__c/fields/Recycling_Bag_Cost__c.field-meta.xml
<CustomField>
    <fullName>Recycling_Bag_Cost__c</fullName>
    <formula>Bags_of_Recycling_Collected__c * Active_Rate_Set__r.Recycling_Bag_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recycling Bag Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>