force-app/main/default/objects/Work_Log__c/fields/Reviewed_Approved__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed &amp; Approved, FFA</label>
    <type>Checkbox</type>
</CustomField>