force-app/main/default/objects/Work_Log__c/fields/Reviewed_Approved_Decoy__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Approved_Decoy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed &amp; Approved, Payroll</label>
    <type>Checkbox</type>
</CustomField>