force-app/main/default/objects/Work_Log__c/fields/Salt_Cost__c.field-meta.xml
<CustomField>
    <fullName>Salt_Cost__c</fullName>
    <formula>Total_Salt_Used__c * Active_Rate_Set__r.Salt_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salt Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>