force-app/main/default/objects/Work_Log__c/fields/Salt_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Salt_Loaded__c</fullName>
    <inlineHelpText>Amount of salt taken out on route.</inlineHelpText>
    <label>Salt Loaded</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>