force-app/main/default/objects/Work_Log__c/fields/Salt_Returned__c.field-meta.xml
<CustomField>
    <fullName>Salt_Returned__c</fullName>
    <inlineHelpText>Amount of salt left at the end of a route.</inlineHelpText>
    <label>Salt Returned</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>