force-app/main/default/objects/Work_Log__c/fields/Signs_Removed__c.field-meta.xml
<CustomField>
    <fullName>Signs_Removed__c</fullName>
    <label># Signs Removed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>