force-app/main/default/objects/Work_Log__c/fields/Total_Intern_ADP_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Intern_ADP_Hours__c</fullName>
    <label>Total Worker ADP Hours</label>
    <summarizedField>Worker_Time__c.ADP_Total_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Worker_Time__c.Worker_Type__c</field>
        <operation>equals</operation>
        <value>Intern</value>
    </summaryFilterItems>
    <summaryForeignKey>Worker_Time__c.Work_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>