force-app/main/default/objects/Work_Log__c/fields/Total_Intern_SUC__c.field-meta.xml
<CustomField>
    <fullName>Total_Intern_SUC__c</fullName>
    <formula>if  ( contains( Organization__r.Name, &quot;CRED&quot;),  

Total_Wage_Cost__c * Active_Rate_Set__r.Intern_Unemployment_CRED__c, 

Total_Wage_Cost__c * Active_Rate_Set__r.Intern_Unemployment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Worker Unemployment (SUC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>