force-app/main/default/objects/Work_Log__c/fields/Total_Intern_Worker_s_Comp_WC__c.field-meta.xml
<CustomField>
    <fullName>Total_Intern_Worker_s_Comp_WC__c</fullName>
    <formula>if  (ispickval(Job_Function__c, &quot;Janitorial (Interior)&quot;),  

Total_Wage_Cost__c * Active_Rate_Set__r.Intern_Worker_s_Comp_Janitorial__c, 

Total_Wage_Cost__c * Active_Rate_Set__r.Intern_Worker_s_Comp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Worker Worker&apos;s Comp (WC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>