force-app/main/default/objects/Work_Log__c/fields/Total_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Total_Mileage__c</fullName>
    <formula>Mileage_In__c -  Mileage_Out__c</formula>
    <label>Total Mileage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>