force-app/main/default/objects/Work_Log__c/fields/Total_Salt_Used__c.field-meta.xml
<CustomField>
    <fullName>Total_Salt_Used__c</fullName>
    <formula>Salt_Loaded__c - Salt_Returned__c</formula>
    <label>Total Salt Used</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>