force-app/main/default/objects/Work_Log__c/fields/Total_Staff_FICA__c.field-meta.xml
<CustomField>
    <fullName>Total_Staff_FICA__c</fullName>
    <formula>Total_Staff_Wage_Cost__c * Active_Rate_Set__r.FICA__c</formula>
    <label>Total Staff FICA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>