force-app/main/default/objects/Work_Log__c/fields/Total_Staff_Wage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Staff_Wage_Cost__c</fullName>
    <label>Total Staff Wage Cost</label>
    <summarizedField>Worker_Time__c.Total_Staff_Wage__c</summarizedField>
    <summaryForeignKey>Worker_Time__c.Work_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>