force-app/main/default/objects/Work_Log__c/fields/Total_Staff_Worker_s_Comp_WC__c.field-meta.xml
<CustomField>
    <fullName>Total_Staff_Worker_s_Comp_WC__c</fullName>
    <formula>Total_Staff_Wage_Cost__c * Active_Rate_Set__r.Staff_Worker_s_Comp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Staff Worker&apos;s Comp (WC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>