force-app/main/default/objects/Work_Log__c/fields/Total_Wage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Wage_Cost__c</fullName>
    <description>Total Interns Wage cost</description>
    <label>Total Worker Wage Cost</label>
    <summarizedField>Worker_Time__c.Total_Wage_Intern__c</summarizedField>
    <summaryForeignKey>Worker_Time__c.Work_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>