force-app/main/default/objects/Work_Log__c/fields/Trash_Bag_Cost__c.field-meta.xml
<CustomField>
    <fullName>Trash_Bag_Cost__c</fullName>
    <formula>Bags_of_Trash_Collected__c * Active_Rate_Set__r.Trash_Bag_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trash Bag Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>