force-app/main/default/objects/Work_Log__c/fields/Tree_Grates_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Tree_Grates_Serviced__c</fullName>
    <label># Tree Grates Serviced</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>