force-app/main/default/objects/Work_Log__c/fields/Vacant_Lots_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Lots_Serviced__c</fullName>
    <label># Vacant Lots Serviced</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>